project(Pulsar)
file(GLOB SOURCES "src/*.cpp")
add_library(Pulsar SHARED ${SOURCES})
target_link_libraries(Pulsar GL)
if(EMSCRIPTEN)
    set_target_properties(Pulsar PROPERTIES SUFFIX .bc)
else()
    target_link_libraries(Pulsar GLEW SDL2)
endif()
if(ENABLE_ASSIMP)
    target_link_libraries(Pulsar assimp)
endif()
if(ENABLE_PNG)
    target_link_libraries(Pulsar png)
endif()
